test/tests/compiler/14_pointers/valid/plx1_kw1_in_name.plx
pub fn main(none) i32 {
    nil1: i32 = nil
    
    return nil1
}
